<resources>
    <string name="app_name">JeDerV1</string>
    <string name="historybutton">HistoryButton</string>
    <string name="gallerybutton">GalleryButton</string>
    <string name="camerabutton">CameraButton</string>
    <string name="intro">Jendela Resep - JeDer is an application to scan food from your camera and it will give you the details of the food</string>
    <string name="camera">Let\'s Take A Pic\'</string>
    <string name="upload">Upload</string>
    <string name="Welcome">Welcome</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="dateofpicture">dateofpicture</string>
    <string name="foodname">foodname</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="cameraicon">Camera</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="header">header</string>
    <string name="logo">Logo</string>
    <string name="get_from_gallery">Get From Gallery</string>
    <string name="see_history">See History</string>
    <string name="recipes">Recipes</string>
    <string name="foodpic">foodpic</string>
    <string name="nama">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerTop">REGISTER</string>
    <string name="welcome_text">Welcome to Jendela Resep</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="loginTop">LOGIN</string>
    <string name="warning">Need to be 6 char or more</string>
    <string name="logout">Logout</string>
    <string name="DetailGo">Go To Details</string>
    <string name="go_to_home">Go To Home</string>
    <string name="retry">Retry</string>
</resources>